--- a/index.html
+++ b/index.html
@@ -16,34 +16,40 @@
         <div id = "word6" class = "wordBox"><div id = "letter61" class = "letterBox"></div><div id = "letter62" class = "letterBox"></div><div id = "letter63" class = "letterBox"></div><div id = "letter64" class = "letterBox"></div><div id = "letter65" class = "letterBox"></div></div>
         <div id = "buffer" style =" height:50px;"></div>
         <div id = "keyboard">
-            <button id = "A" class = "key" onclick = "wordle('A')">A</button>
-            <button id = "B" class = "key" onclick = "wordle('B')">B</button>
-            <button id = "C" class = "key" onclick = "wordle('C')">C</button>
-            <button id = "D" class = "key" onclick = "wordle('D')">D</button>
-            <button id = "E" class = "key" onclick = "wordle('E')">E</button>
-            <button id = "F" class = "key" onclick = "wordle('F')">F</button>
-            <button id = "G" class = "key" onclick = "wordle('G')">G</button>
-            <button id = "H" class = "key" onclick = "wordle('H')">H</button>
-            <button id = "I" class = "key" onclick = "wordle('I')">I</button>
-            <button id = "J" class = "key" onclick = "wordle('J')">J</button>
-            <button id = "K" class = "key" onclick = "wordle('K')">K</button>
-            <button id = "L" class = "key" onclick = "wordle('L')">L</button>
-            <button id = "M" class = "key" onclick = "wordle('M')">M</button>
-            <button id = "N" class = "key" onclick = "wordle('N')">N</button>
-            <button id = "O" class = "key" onclick = "wordle('O')">O</button>
-            <button id = "P" class = "key" onclick = "wordle('P')">P</button>
-            <button id = "Q" class = "key" onclick = "wordle('Q')">Q</button>
-            <button id = "R" class = "key" onclick = "wordle('R')">R</button>
-            <button id = "S" class = "key" onclick = "wordle('S')">S</button>
-            <button id = "T" class = "key" onclick = "wordle('T')">T</button>
-            <button id = "Enter" class = "double" onclick = "wordle('Enter')">ENTER</button>
-            <button id = "U" class = "key" onclick = "wordle('U')">U</button>
-            <button id = "V" class = "key" onclick = "wordle('V')">V</button>
-            <button id = "W" class = "key" onclick = "wordle('W')">W</button>
-            <button id = "X" class = "key" onclick = "wordle('X')">X</button>
-            <button id = "Y" class = "key" onclick = "wordle('Y')">Y</button>
-            <button id = "Z" class = "key" onclick = "wordle('Z')">Z</button>
-            <button id = "Backspace" class = "double" onclick = "wordle('Backspace')">BACK</button>
+            <div id = "row1">
+                <button id = "Q" class = "key" onclick = "wordle('Q')">Q</button>
+                <button id = "W" class = "key" onclick = "wordle('W')">W</button>
+                <button id = "E" class = "key" onclick = "wordle('E')">E</button>
+                <button id = "R" class = "key" onclick = "wordle('R')">R</button>
+                <button id = "T" class = "key" onclick = "wordle('T')">T</button>
+                <button id = "Y" class = "key" onclick = "wordle('Y')">Y</button>
+                <button id = "U" class = "key" onclick = "wordle('U')">U</button>
+                <button id = "I" class = "key" onclick = "wordle('I')">I</button>
+                <button id = "O" class = "key" onclick = "wordle('O')">O</button>
+                <button id = "P" class = "key" onclick = "wordle('P')">P</button>
+            </div>
+            <div id = "row2">
+                <button id = "A" class = "key" onclick = "wordle('A')">A</button>
+                <button id = "S" class = "key" onclick = "wordle('S')">S</button>
+                <button id = "D" class = "key" onclick = "wordle('D')">D</button>
+                <button id = "F" class = "key" onclick = "wordle('F')">F</button>
+                <button id = "G" class = "key" onclick = "wordle('G')">G</button>
+                <button id = "H" class = "key" onclick = "wordle('H')">H</button>
+                <button id = "J" class = "key" onclick = "wordle('J')">J</button>
+                <button id = "K" class = "key" onclick = "wordle('K')">K</button>
+                <button id = "L" class = "key" onclick = "wordle('L')">L</button>
+            </div>
+            <div id = "row3">
+                <button id = "Enter" class = "double" onclick = "wordle('Enter')">ENTER</button>
+                <button id = "Z" class = "key" onclick = "wordle('Z')">Z</button>
+                <button id = "X" class = "key" onclick = "wordle('X')">X</button>
+                <button id = "C" class = "key" onclick = "wordle('C')">C</button>
+                <button id = "V" class = "key" onclick = "wordle('V')">V</button>
+                <button id = "B" class = "key" onclick = "wordle('B')">B</button>
+                <button id = "N" class = "key" onclick = "wordle('N')">N</button>
+                <button id = "M" class = "key" onclick = "wordle('M')">M</button>
+                <button id = "Backspace" class = "double" onclick = "wordle('Backspace')">BACK</button>
+            </div>
         </div>
     </body>
 </html>
